# deli

./: Cargo.toml  LICENSE
.github/workflows/: rust.yml
benches/: benchmarks.rs  huge_point_collision.rs
src/: bounding.rs  lib.rs
src/collision/: collidable.rs  mod.rs  simplex.rs
src/geometry/: mod.rs  simplex.rs  traits.rs
